start learning css and thesis header still alignment issue to resolve

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,6 +24,11 @@
         "footer footer footer";
 }
 
+body {
+    margin: 0px;
+    padding: 0px;
+}
+
 #logo {
     background-color: white;
     grid-area: logo;
@@ -100,7 +105,9 @@ nav p {
     background-color: white;
     grid-area: content1;
     padding: 32px 24px;
-    border: 1px solid lightgrey;
+    border-top: 1px solid lightgray;
+    border-left: 1px solid lightgray;
+    border-bottom: 1px solid white;
     text-align: left;
     color: rgb(54, 69, 79);
     font-size: 28px;
@@ -136,6 +143,7 @@ nav p {
 #content2Part2 {
     grid-area: content2Part2;
     display: inline-block;
+    color: rgb(54, 69, 79);
     background-color: white;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray; 
@@ -158,6 +166,7 @@ nav p {
 
 #content3Part2 {
     grid-area: content3Part2;
+    color: rgb(54, 69, 79);
     background-color: white;
     border-top: 1px solid lightgray;
     border-bottom: 1px solid lightgray;
@@ -174,13 +183,15 @@ nav p {
     grid-area: content4;
     padding: 16px 16px;
     border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
     border-left: 1px solid lightgray;
+    border-bottom: 1px solid white;
 }
 
 #content4Part2 {
     grid-area: content4Part2;
+    color: rgb(54, 69, 79);
     background-color: lightgray;
+    border-bottom: 1px solid white;
 }
 
 #content4Img {
@@ -193,13 +204,213 @@ nav p {
     color: dodgerblue;
 }
 #startLearning {
-    background-color: goldenrod;
+    background-color: lightgray;
     grid-area: startLearning;
+    font-size: 24px;
+}
+
+#slh {
+    color: rgb(54, 69, 79);
+    text-align: center;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    font-size: 42px;
+}
+
+#sl1 {
+    display: inline-block;
+    margin-left: 72px;
+    background-color: white;
+    max-width: 532px;
+    height: 480px;
+    margin-bottom: 32px;
+}
+
+#sl1-1 {
+    padding-top: 16px;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl1-2 {
+    display: block;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
+}
+
+#sl1-3 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl2 {
+    display: inline-block;
+    margin-left: 32px;
+    margin-right: 32px;
+    background-color: white;
+    max-width: 532px;
+    height: 480px;
+    margin-bottom: 0px;
+}
+
+#sl2-1 {
+    padding-top: 16px;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl2-2 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
+}
+
+#sl2-3 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl3 {
+    display: inline-block;
+    margin-right: 72px;
+    background-color: white;
+    max-width: 532px;
+    height: 480px;
+    margin-bottom: 32px;
+}
+
+#sl3-1 {
+    padding-top: 16px;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl3-2 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
+}
+
+#sl3-3 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl4 {
+    display: inline-block;
+    margin-left: 72px;
+    background-color: white;
+    max-width: 532px;
+    height: 480px;
+    margin-bottom: 32px;
+}
+
+#sl4-1 {
+    padding-top: 16px;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl4-2 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
+}
+
+#sl4-3 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl5 {
+    display: inline-block;
+    margin-left: 32px;
+    margin-right: 32px;
+    background-color: white;
+    max-width: 532px;
+    height: 480px;
+    margin-bottom: 32px;
+}
+
+#sl5-1 {
+    padding-top: 16px;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl5-2 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
+}
+
+#sl5-3 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl6 {
+    display: inline-block;
+    margin-right: 72px;
+    background-color: white;
+    max-width: 532px;
+    height: 480px;
+    margin-bottom: 32px;
+}
+
+#sl6-1 {
+    padding-top: 16px;
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
+}
+
+#sl6-2 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin: 0px;
+}
+
+#sl6-3 {
+    color: rgb(54, 69, 79);
+    padding-left: 16px;
+    margin: 0px;
 }
 
 #thesis {
-    background-color: indianred;
+    background-color: white;
     grid-area: thesis;
+    color: rgb(54, 69, 79);
+    text-align: center;
+    font-size: 32px;
+}
+
+#thesisH {
+    padding: 0px;
+    margin: 32px 0px;
 }
 
 #content5 {
